# wixy

./: .gitattributes  .gitignore  .scratch-pr-body.md  .scratch-todo-pr.md  CLAUDE.md  LICENSE  README.md  brief.md  deploy.py  install.py  launcher.py  pyproject.toml  requirements.txt  reviews-demo.html  slots.wixy.yaml  uxer-style.json
.aim/: audit-history.jsonl  settings.json
.github/workflows/: capture-baseline.yml  ci.yml  publish-image.yml  sync-upstream.yml
admin-ui/: esbuild.config.mjs  package-lock.json  package.json  tsconfig.json
admin-ui/src/: api.ts  chatPanel.ts  contrast.ts  diffView.ts  editView.ts  fontScale.ts  googleFonts.ts  googleFontsCatalog.ts  historyPanel.ts  index.ts  markdown.ts  mediaDialog.ts  mediaPanel.ts  opQueue.ts  pageSettingsDrawer.ts  pagesPanel.ts  protocol.ts  publishDrawer.ts  router.ts  screenshot.ts  sessionState.ts  settingsPanel.ts  shell.ts  shortcuts.ts  spinnerButton.ts  style.css  theme.ts  themeEditor.ts  themePanel.ts  themeVars.ts  thumbnailService.ts  zoom.ts
admin-ui/tests/: api.test.ts  chatPanel.test.ts  contrast.test.ts  diffView.test.ts  editView.test.ts  fontScale.test.ts  googleFonts.test.ts  historyPanel.test.ts  markdown.test.ts  mediaDialog.test.ts  mediaPanel.test.ts  opQueue.test.ts  pageSettingsDrawer.test.ts  pagesPanel.test.ts  protocol.test.ts  publishDrawer.test.ts  router.test.ts  screenshot.test.ts  sessionState.test.ts  settingsPanel.test.ts  shell.test.ts  shortcuts.test.ts  smoke.test.ts  styleCss.test.ts  theme.test.ts  themeEditor.test.ts  themePanel.test.ts  themeVars.test.ts  thumbnailService.test.ts  zoom.test.ts
advertising/: 00-master-plan.md  01-channel-playbook.md  02-regulatory-guardrails.md  03-creative-studio.md
advertising/research/: existing-posts-audit.md  local-landscape.md
builder/: __init__.py  __main__.py  bindings.py  bindings_map.py  build.py  cli.py  collections.py  config.py  content.py  errors.py  jsonschema_lite.py  jsontypes.py  markdown_inline.py  nav.py  render.py  sanitize.py  sitemap.py  templates.py  theme.py  validate.py
builder/schemas/: footer-link.schema.json  gallery-slider.schema.json  gallery-tile.schema.json  hours.schema.json  nav-extra.schema.json  reviews-item.schema.json  rx-item.schema.json  treatment-card.schema.json
builder/tests/: conftest.py  test_admin_css_integrity.py  test_bindings.py  test_bindings_map.py  test_build.py  test_cli.py  test_content.py  test_jsonschema_lite.py  test_markdown_inline.py  test_nav.py  test_partial_migration_state.py  test_render.py  test_sanitize.py  test_smoke.py  test_theme.py  test_validate.py
decisions/00001-architecture-foundations/: decision.md  title.md
decisions/00002-builder-schema-interpretations/: decision.md  title.md
decisions/00003-parity-harness-tooling/: decision.md  title.md
decisions/00004-builder-tolerates-partial-migration/: decision.md  title.md
decisions/00005-parity-capture-emulates-reduced-motion/: decision.md  title.md
decisions/00006-parity-capture-forces-reveal-visible/: decision.md  title.md
decisions/00007-nav-active-marks-every-nav-container/: decision.md  title.md
decisions/00008-parity-links-compare-resolved-urls/: decision.md  title.md
decisions/00009-rx-item-schema-price-field/: decision.md  title.md
decisions/00010-m6-registry-storage-checkout/: decision.md  title.md
decisions/00011-m6-overlay-merged-content/: decision.md  title.md
decisions/00012-m6-bindings-map-format/: decision.md  title.md
decisions/00013-m6-preview-renderer-fastapi-app/: decision.md  title.md
decisions/00014-m6-public-serving-jwt-admin-api/: decision.md  title.md
decisions/00015-m7-editor-v1-slicing/: decision.md  title.md
decisions/00016-m7-slice1-protocol-op-queue/: decision.md  title.md
decisions/00017-m7-slice2-editor-overlay/: decision.md  title.md
docs/: DESIGN-AND-CONTENT.md  booking-platform-comparison.md  google-reviews.json
docs/ai/: ai-chat.md  (+11 more)
e2e/: fixture_server.py  package-lock.json  package.json  playwright.config.ts
editor/: esbuild.config.mjs  package-lock.json  package.json  vitest.config.ts
guide/: README.md  __init__.py  __main__.py  build.py  linkcheck.py  manifest.py
handover/: before-after-gallery-enhancement.md
projects/: ca.json
spec/: 00-mission.md  01-architecture.md  02-content-model.md  03-site-migration.md  04-server.md  05-editor.md  06-ai-chat.md  07-hosting-deploy.md  08-testing-acceptance.md  09-work-plan.md  KICKOFF-PROMPT.md  README.md
todos/: TODO-00002.md  TODO-00003.md  TODO-00004.md  TODO-00005.md  TODO-00007.md  TODO-00008.md  TODO-00009.md  TODO-00010.md
tooling/: README.md  downscale_photos.py  provision_bookings.py  provision_ca_cloudflare.py  set_hours.py
wixy_server/: __init__.py  __main__.py  app.py  auth.py  bootstrap.py  chats.py  checkout.py  cmdchat.py  draft_sanitize.py  github.py  ledger.py  live_pointer.py  media.py  merged_content.py  overlay.py  preview.py  publisher.py  redirects.py  registry.py  restore.py  routes_admin_api.py  routes_ai.py  routes_chat.py  routes_engine.py  routes_internal.py  routes_preview.py  routes_public.py  routes_system.py  routes_version.py  routes_versions.py  settings.py  site_source.py  staticcache.py  storage.py  thumbnails.py  treelock.py  version_diff.py  watcher.py
(+437 files in other folders)
